k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: rubblestech3400/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
